# pymorsed

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  index.md  installation.md  project_structure.md  usage.md
examples/: basic_usage.py
installation/: index.html
project_structure/: index.html
search/: search_index.json
src/Morse_Code_Generator/: __init__.py  audio_decoder.py  audio_encoder.py  decoder.py
src/Morse_Code_Generator/data/: russian.json
src/pymorsed/: audio_decoder.py  audio_encoder.py  decoder.py  encoder.py  utils.py
src/pymorsed/data/: english.json
src/tests/: test_audio_encoder.py  test_encoder.py
tests/: test_audio_decoder.py  test_audio_encoder.py  test_decoder.py  test_encoder.py
usage/: index.html
