[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Morse_Code_Generator"
version = "0.1.0"
description = "Morse code encoder and decoder"
authors = [{ name = "Shaurya Verma" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"Morse_Code_Generator" = ["data/*.json"]