[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Morse_Code_Generator"
version = "0.1.0"
description = "Morse code encoder and decoder"
authors = [{ name = "Shaurya Verma" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
    "matplotlib",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"Morse_Code_Generator" = ["data/*.json"]