[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymorsed"
version = "0.1.0"
description = "Encode, decode, generate, and analyze Morse code audio signals in Python."
authors = [{ name = "Shaurya Prakash Verma", email = "shauryapv@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
    "matplotlib",
]

keywords = [
    "morse",
    "morse-code",
    "audio",
    "signal-processing",
    "encoder",
    "decoder"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pymorsed" = ["data/*.json"]

[project.urls]
Homepage = "https://github.com/ShauryaPrakashVerma/pymorsed"
Repository = "https://github.com/ShauryaPrakashVerma/pymorsed"
Issues = "https://github.com/ShauryaPrakashVerma/pymorsed/issues"